# ChangeLog for kde-base/kanagram
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/ChangeLog,v 1.243 2013/07/30 10:40:59 ago Exp $

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.5.ebuild:
  Stable for ppc, wrt to bug #477634

  29 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.5.ebuild:
  Stable for x86, wrt to bug #477634

  27 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.5.ebuild:
  Stable for amd64, wrt to bug #477634

*kanagram-4.10.5 (02 Jul 2013)

  02 Jul 2013; Johannes Huber <johu@gentoo.org> +kanagram-4.10.5.ebuild:
  Version bump KDE SC 4.10.5

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> -kanagram-4.10.3.ebuild:
  Remove old

  02 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.4.ebuild:
  Stable for ppc64, wrt to bug #473942

  01 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.4.ebuild:
  Stable for ppc, wrt to bug #473942

  30 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.4.ebuild:
  Stable for x86, wrt to bug #473942

  29 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.4.ebuild:
  Stable for amd64, wrt to bug #473942

  08 Jun 2013; Agostino Sarubbo <ago@gentoo.org> -kanagram-4.10.2.ebuild:
  Remove old

  08 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.3.ebuild:
  Stable for ppc64, wrt to bug #471392

  06 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.3.ebuild:
  Stable for ppc, wrt to bug #471392

  05 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.3.ebuild:
  Stable for x86, wrt to bug #471392

*kanagram-4.10.4 (04 Jun 2013)

  04 Jun 2013; Johannes Huber <johu@gentoo.org> +kanagram-4.10.4.ebuild:
  Version bump KDE SC 4.10.4

  04 Jun 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.3.ebuild:
  Stable for amd64, wrt to bug #471392

*kanagram-4.10.3 (06 May 2013)

  06 May 2013; Johannes Huber <johu@gentoo.org> +kanagram-4.10.3.ebuild: