@@ -3,24 +3,18 @@ Hash: SHA256
 
 DIST kanagram-4.10.4.tar.xz 1057388 SHA256 6d9151638602351e80556fc2c899642ea9d885755290a77380135ea95384ecdb SHA512 eca5c2d5b03f4cef499081fdcab1f0eb3ba0fd03476b296b747cc8db654c9ff3627c56434ab6a95bc2527bc37721aef503c7f4c1049d2c32cd3262600870667e WHIRLPOOL de47e7e8ca78437e6533bda45f053ffc0004d28733a53e2d515817621c5917897457e18a9f757c5164d6d2ec41c093bdaade5880d1ac967e1ee99c7d97969ac2
 DIST kanagram-4.10.5.tar.xz 1066692 SHA256 d3caac9411ca0bc47fa8603f32e5b57d5d560f369213b935d9ff3ddd962a6d87 SHA512 af1a9c53979743e8363747fa4e28101c3a1b557a2568911b462a40e2789212bac5862ecd51e31808c53a7896f75f8a52ba35bd0c5539ecf194d82eff914aea70 WHIRLPOOL 624c2af9eed98e984353ef7ecfb318117819f6086907eaab2b91b20c04f9661cb560c658328b7ddacdfd0ca1c16e31e9aecbf429077c50df31e9b6f9067d31d7
-EBUILD kanagram-4.10.4.ebuild 442 SHA256 f0b8f2de2a70f6096394f969ca6bd5dc924ff6e47aba9766e5d0ea986f1b5924 SHA512 f76607a154cf5271a18823b6dddbc685b1eed60c8c0d5971170fc4567eb0508b97f00c0e7d1c12d22340c0e288a313bba4fa156ebc04ac03698b41d75d7681d9 WHIRLPOOL f5afe70807d3f7b90cc866d2ff10459758002d16f40333945174b906f3131eeab800faf31fdae1830fd0da8ead5459da5362a4b9c5cc91706d59197c2a7ef910
-EBUILD kanagram-4.10.5.ebuild 443 SHA256 24cc5d104e940c4145b8c3926968130267e5dfc661590427ba31b7170911a113 SHA512 5c85ebf5ac14cdc1e377108b72d3fbb106df8d4997fe0bf096ccb0a5b3fe9291ba059def7ed36094283dd3fb9cde9902f709780964aa4182a8068e164fc65b2f WHIRLPOOL f006e4dbdaae954d8f8a9f3a1d6f68f3144e55477fc5b80547ab2a469fc5a470011e6a66c48c9bb68a1f3aef5407d8b5f0f74b1435bc597dc49a0c5cc5b4b175
-MISC ChangeLog 28498 SHA256 6ff29ff96b890065653d91b132e1fccb98ac469a7212db784b9e1c11fd4778eb SHA512 df19403f7253e4e9110b3966956531188dd1093cc9da240842c21c846f952da532d6edb0af353dafe780b0a2f0d81c45c94cc253e42330a2b24593a2befa4cd3 WHIRLPOOL 7b2ad7286a63442ab55ffeb0d1669a784802885e22713604a57a5369363efa9b274181b256b83418f02a7a52a8735f69f3bbe1a0795da6c827b6c00fc74223d4
+EBUILD kanagram-4.10.4.ebuild 529 SHA256 27db667e12249d26b1c84677fdd8af55a35860f1e5480ec23609860525aebc19 SHA512 e36778d828d5000659eff0b5c2500ec6ea9ba3595b792921ea96fbea73c1360b05e44e4398356e5032cd565ac488c55a68059218de59cd5258e4a8cb3b566b3a WHIRLPOOL 2e0836e9a746d499202c5a05aa1b36e78f112629e516064e47a0dc38410042a7c3d9ef678e52894f3aae3b86224c954238d1418f8315e33847e472484ec3cd55
+EBUILD kanagram-4.10.5.ebuild 530 SHA256 7d6c3beb449b86b2c1a51b74f28c58b93c85c6c829ff5c3685be7699fff953f7 SHA512 fca6b93bcf7b1f835eb7fefa5a417ab133946c33dbc99e4fa71001eb5adc4e5decc3eb714059ec82f6b5c87404c0c1787821e9d59834322fc920a6e53e492f2d WHIRLPOOL 836f9ec24ef1b595be3a1380f67f7a21f78f0655e73be7fa8256b00dcab5b0673716bca3860bbba634f0d277d4b8e4742cee852c2b92dbd4eaef89cacf7291c3
+MISC ChangeLog 28633 SHA256 6ae142225446014e45642c08be07582ebb003c64a89678f8a449109e2e0c97f4 SHA512 459ebe23fd01c0e5bb3162b3e383b48640026bcb6001fcd0f078d9ce4b23ab467b85ea79eddefdcb004cf693b72397bd98bcc3c5fc00117a81dab85bd7f9e275 WHIRLPOOL 1ad8beb7fcdd6edc1e2abff1a6f3cc6f9c64416abbf969ad0ce0af98f8804eb7918e56620486571b76f5567e5252dad31d2f2edbe2a136d6e2be8b3e55be935f
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJR95jjAAoJELp701BxlEWf9XsQAIUogSVh1hXBZIvVS2pW0W7i
-13ydbdXaXhfW/C6db1Ts/vQMt/+LG8+SLG7TR1OWT8mRo09CpQXcX1tABb2KA5bF
-vTEHNycpMhTDeIBUOc2pK5RegAnVhmmo8s6qwpL+q3jnXSfIkkwE5NX/Gp3tsGr5
-XvdOfzesMJdxQtpwvXm2FPz1qk9K+UyT06wNOaZVFNbEjQiXqR1wrqJ2+5hE/8zw
-E/9Gr4KTvfLSg3mRU36dSQrf9ON5zwrjlAsSeYFqIiv1hLWyF0c9+8OnANsK81Ow
-/YoI/X2MBhme6f1aTTBWAkH07sdWvObh4eVl7a+p9N3NVNSKE+UE/6z7CIJJMc20
-q3y4O+WQ5ZHUvD1+Lq71HG4JRnJ5XPc+/BDS8SX2LQuYXiiRjTck5a/bgLBDa2JR
-ojU1ITCU4SOe1alz2tGk7Pr5Gx98sI34HOFCGrqYZbJ+Ap9Olb93nBazgx5fdzNp
-JRxUOgXK7GrSIwH9JFKTRprNnya9xwMuVVtC1UrEHPwa9hZM5ifmPGN4augyjhlR
-4vRsr0+fmJNeFxQZRGAZVf/ohE/nvfRDaSCHkgzx02Jqdg1RlB2GHYpQnZefiOZD
-pPMXzhBmJ15VsQec7T6HP14ne4zNwbbFLb6HEH4h4BGN9WKwljWtCGzJkR62ahvm
-iOMefkSdzVFYf36oPXox
-=Pt8G
+iQEcBAEBCAAGBQJR+W1pAAoJEO+t9ga+3I3avQ8H/RhrCTV4Q1uRD7SPRwlgjE37
+/wq+QvyDa6FkQvamEMi8TQz6SKRIeEPdIgiBjxtfjO7eAJB42tBvEsdDT/SE26ne
+4Ts6YEFC1aBobodUUOvq0l8hby+0xg8dih+Bon2LNlcktbfxeIT6KNHJSwu4R6B4
+hEy8Uygmvutm7KM8tiJ12EPknvohe+whcFrOZ75umpiC/+X6FULMe9HuWDTWU8Ql
+3rlQZE0cosnf9eZhJSyaHYY4zNfkytEv5oYlBdsHQUxODp7IPZ8/FPzRyqVpjbN9
+3Q4csZoKFfjDPr8ys7Jb4Muv4FFS2tuvlyL9i1FGxnfSGoxO9Mbrpl44TJd/J9s=
+=L+rd
 -----END PGP SIGNATURE-----
