@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/kanagram-4.10.5.ebuild,v 1.4 2013/07/30 10:40:59 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/kanagram-4.10.5.ebuild,v 1.5 2013/07/31 20:02:57 johu Exp $
 
 EAPI=5
 
@@ -8,6 +8,8 @@ KDE_HANDBOOK="optional"
 inherit kde4-base
 
 DESCRIPTION="KDE: letter order game."
+HOMEPAGE="http://kde.org/applications/education/kanagram
+http://edu.kde.org/kanagram"
 KEYWORDS="amd64 ~arm ppc ~ppc64 x86 ~amd64-linux ~x86-linux"
 IUSE="debug"
 
