@@ -1,6 +1,10 @@
 # ChangeLog for kde-base/kanagram
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/ChangeLog,v 1.243 2013/07/30 10:40:59 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kanagram/ChangeLog,v 1.244 2013/07/31 20:02:57 johu Exp $
+
+  31 Jul 2013; Johannes Huber <johu@gentoo.org> kanagram-4.10.4.ebuild,
+  kanagram-4.10.5.ebuild:
+  Update HOMEPAGE wrt bug #478932.
 
   30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> kanagram-4.10.5.ebuild:
   Stable for ppc, wrt to bug #477634
